Replace guava list filtering with stream-api + lambdas
* Increase readability and speed by using the java8-stream api instead of
guava to do filtering in PersonServiceImpl.
* Add test suite for changed clas PersonServiceImpl.